# pyincus

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yaml
src/pyincus/: __init__.py
src/pyincus/models/: base.py  fields.py  general.py
tests/unit/models/: test_base.py  test_general.py
