[project]
name = "pyincus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Edmilson Monteiro Rodrigues Neto", email = "edmilson.rodriguesn38@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
